# backend_easy

./: .coveragerc  .dockerignore  .env.ci  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .pylintrc  AB_TESTING_GUIDE.md  ADAFACE_INTEGRATION_GUIDE.md  ADAFACE_SETUP.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_ENVIRONMENT_REFACTOR.md  DEVELOPMENT.md  DOCKER_COMPOSE_GUIDE.md  Dockerfile  FIREBASE_SETUP.md  LINTING_README.md  LOGGING_AND_SINGLETON_PLAN.md  LOOKER_STUDIO_DASHBOARDS.md  MODEL_CONFIGURATION_GUIDE.md  MULTI_MODEL_IMPLEMENTATION.md  Makefile  PERMISSION_MAPPING.md  README.md  SEEDING_QUICKSTART.md  SIMPLIFIED_ENV_STRUCTURE.md  SKIP_GUIDE.md  TEST.md  ai.md  blue-green-manager.sh  build-docker.sh  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  get_firebase_key.bat  manage.py  mypy.ini  openapi-schema.yaml  openapi.yaml  (+10 more)
.github/: DEVELOPMENT.md
.github/scripts/: cleanup-registry.sh
.github/workflows/: README.md  backend-ci.yml  build-image.yml  build-push-ghcr.yml  build-push.yml  build.yml  cd.yaml  cd.yml  ci.yml  deploy-manual.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  detect-changes.yml  fast-stage-deploy.yml  push-gar.yml  push-ghcr.yml  push-to-gar.yml  quick-build.yml  railway-cd.yml  verify-ghcr.yml
app/: =3.12.0  manage.py  openapi-schema.yaml  pyproject.toml  pytest.ini  schema.yaml
app/analytics/: __init__.py  signals.py
app/bus_kiosk_backend/: asgi.py  authentication.py  celery.py  dev_settings.py  exceptions.py  health.py  permissions.py  prod_settings.py  production_settings.py  schema_hooks.py  settings.py  settings_backup.py  test_settings.py  urls.py
app/buses/: admin.py  admin.py.backup  models.py  models.py.backup  serializers.py  serializers.py.backup  services.py  tests.py  urls.py  views.py
app/events/: admin.py  admin_actions.py  api_views.py  apps.py  dashboard_serializers.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
app/face_verification/: __init__.py  apps.py  cloud_tasks_client.py  tasks.py  urls.py  views.py
app/kiosks/: __init__.py  admin.py  apps.py  authentication.py  factories.py  models.py  models_operation_timing.py  permissions.py  serializers.py  services.py  signals.py  tests.py  token_config.py  urls.py  views.py
app/ml_config/: admin.py  apps.py  models.py
app/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
app/realtime/: apps.py  bus_location_manager.py  consumers.py  firebase_manager.py  middleware.py  routing.py  signals.py
app/school_dashboard/: urls.py  views.py
app/students/: admin.py  apps.py  face_recognition_config.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
app/templates/: home.html
app/tests/: README.md  __init__.py  conftest.py  factories.py  run_tests.py  test_all_endpoints_schema.py  test_api_endpoints.py  test_auth.py  test_bus_location_iam.py  test_health.py  test_openapi_schema.py  test_security.py
app/users/: admin.py  apps.py  models.py  serializers.py  signals.py  token_config.py  urls.py  views.py
app/utils/: __init__.py  admin_helpers.py  maps_proxy.py  serializer_mixins.py  timezone_utils.py
bus_kiosk_backend/: celery.py  exceptions.py  health.py  permissions.py  schema_hooks.py  settings.py  test_settings.py  urls.py  wsgi.py
bus_kiosk_backend/middleware/: __init__.py
bus_kiosk_backend/utils/: toml_loader.py
buses/: admin.py  models.py  serializers.py  tests.py  views.py
buses/migrations/: 0001_initial.py
config/: README.md  mypy.ini  pyproject.toml  run_mypy.py
doc/: CI_ARCHITECTURE.md  CI_REFACTOR.md  KIOSK_API_ARCHITECTURE.md  OPENAPI_SYNC_STATUS.md  README.md  REFACTOR_TEST_REPORT.md  task.md
doc/archive/: API_CLEANUP_SUMMARY.md  BIN_REDUNDANCY_ANALYSIS.md  BIN_SCRIPTS_ANALYSIS.md  CLEANUP_COMPLETE.md  KIOSK_API_STATUS_REPORT.md
doc_new/: SETUP.md  SMART_HOOKS_README.md
docs/: AUTOMATED_SKIP_LOGIC.md  DATABASE_CONNECTION_POOLING.md  INTEGRATION_TESTS.md  RBAC_IMPLEMENTATION_DENY_BY_DEFAULT.md  SECURE_KIOSK_AUTH_IMPLEMENTATION.md  SECURITY_FIX_API_KEY_HASHING.md  SECURITY_VULNERABILITY_RBAC_FIX.md  STAGE2_TESTING_SUMMARY.md  TIMEZONE_GUIDE.md  WEBSOCKET_REALTIME_TRACKING.md  ci-pipeline-flow.md
events/: admin.py  models.py  serializers.py  tests.py  views.py
events/migrations/: 0001_initial.py
firebase_keys/: .gitignore  README.md  get_new_firebase_key.bat  verify_key.bat
imperial_governance/: README.md  ssot.yaml
imperial_governance/CONSTITUTION_NOTES/: DJANGO_APPS.MD  JWT_TOKEN_LIFECYCLE.md  ZERO_DRIFT_ARCHITECTURE.md  authentication.md
imperial_governance/constitutional_core/: api_contracts.yaml  database_schema.yaml  database_schema.yaml.backup
infrastructure/: .dockerignore  .env.dev  .env.example  BLUE_GREEN_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  deploy.sh  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
infrastructure/nginx/: nginx.conf
kiosks/: admin.py  apps.py  factories.py  models.py  serializers.py  tests.py  views.py
kiosks/migrations/: 0001_initial.py
ml_models/: config.py  model_loader.py
scripts/: README.md  check_api_drift.sh  ci-test.sh  install-hooks.ps1  install-hooks.sh  run_in_venv.sh  run_integration_tests.ps1  security-scan.sh  seed_dashboard_data.py  smart_hook_orchestrator.sh  summarize_analyzers.py  update_frontend_sdk.ps1  update_frontend_sdk.py
seed_data/: README.md  bus_stops.json  buses.json  kiosks.json  routes.json  sample_students.json  schools.json
students/: models.py  serializers.py  urls.py  views.py
students/migrations/: 0001_initial.py  0003_alter_student_assigned_bus_delete_bus.py
templates/: api_docs.html  home.html
test/: test_models_local.py  test_onnx_models.py
tests/: README.md  conftest.py  factories.py  run_tests.py  test_all_endpoints_schema.py  test_api_endpoints.py  test_auth.py  test_firebase_kiosk_auth.py  test_health.py  test_openapi_schema.py  test_security.py
tools/: README.md
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+195 files in other folders)
